[gd_scene load_steps=6 format=2]

[ext_resource path="res://admob-lib/admob.gd" type="Script" id=1]
[ext_resource path="res://GameDVDCardtridge/AdmobberTestio/AdmobberTestio.gd" type="Script" id=2]
[ext_resource path="res://fonts/Built/Ubuntu_monospace_48tred.tres" type="DynamicFont" id=3]
[ext_resource path="res://GameDVDCardtridge/AdmobberTestio/QuitDialoguer.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameDVDCardtridge/AdmobberTestio/LEDs.tscn" type="PackedScene" id=5]


[node name="AdmobberTestio" type="Node"]
script = ExtResource( 2 )

[node name="UIman" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UIman"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreControl" type="VBoxContainer" parent="UIman/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PastaGigi" type="HBoxContainer" parent="UIman/Control/PreControl"]
margin_top = 285.0
margin_right = 1920.0
margin_bottom = 795.0
rect_min_size = Vector2( 0, 510 )

[node name="RemotIklan" type="VBoxContainer" parent="UIman/Control/PreControl/PastaGigi"]
margin_right = 1216.0
margin_bottom = 510.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Statuser" type="VBoxContainer" parent="UIman/Control/PreControl/PastaGigi/RemotIklan"]
margin_right = 1216.0
margin_bottom = 121.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="UIman/Control/PreControl/PastaGigi/RemotIklan/Statuser"]
margin_right = 1216.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 3 )
text = "Status LEDs"
align = 1
valign = 1

[node name="LEDs" parent="UIman/Control/PreControl/PastaGigi/RemotIklan/Statuser" instance=ExtResource( 5 )]

[node name="Loader" type="VBoxContainer" parent="UIman/Control/PreControl/PastaGigi/RemotIklan"]
margin_top = 129.0
margin_right = 1216.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="UIman/Control/PreControl/PastaGigi/RemotIklan/Loader"]
margin_right = 1216.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 3 )
text = "Load Iklan Right now! (already autoloaded!)"
align = 1
valign = 1

[node name="ButtonActionsLoad" type="HBoxContainer" parent="UIman/Control/PreControl/PastaGigi/RemotIklan/Loader"]
margin_top = 57.0
margin_right = 1216.0
margin_bottom = 121.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Banner" type="Button" parent="UIman/Control/PreControl/PastaGigi/RemotIklan/Loader/ButtonActionsLoad"]
margin_right = 288.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 3 )
text = "Banner Load"

[node name="Interstitial" type="Button" parent="UIman/Control/PreControl/PastaGigi/RemotIklan/Loader/ButtonActionsLoad"]
margin_left = 296.0
margin_right = 728.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 3 )
text = "Interstitial Load"

[node name="RewardedVideo" type="Button" parent="UIman/Control/PreControl/PastaGigi/RemotIklan/Loader/ButtonActionsLoad"]
margin_left = 736.0
margin_right = 1216.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 3 )
text = "Video Rewarded Load"

[node name="Shower" type="VBoxContainer" parent="UIman/Control/PreControl/PastaGigi/RemotIklan"]
margin_top = 258.0
margin_right = 1216.0
margin_bottom = 379.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="UIman/Control/PreControl/PastaGigi/RemotIklan/Shower"]
margin_right = 1216.0
margin_bottom = 49.0
size_flags_vertical = 5
custom_fonts/font = ExtResource( 3 )
text = "Show Iklan Now!"
align = 1
valign = 1

[node name="ButtonActionsLoad" type="HBoxContainer" parent="UIman/Control/PreControl/PastaGigi/RemotIklan/Shower"]
margin_top = 57.0
margin_right = 1216.0
margin_bottom = 121.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="BannerSHow" type="Button" parent="UIman/Control/PreControl/PastaGigi/RemotIklan/Shower/ButtonActionsLoad"]
margin_right = 288.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 3 )
text = "Banner Show"

[node name="InterstitialSHow" type="Button" parent="UIman/Control/PreControl/PastaGigi/RemotIklan/Shower/ButtonActionsLoad"]
margin_left = 296.0
margin_right = 728.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 3 )
text = "Interstitial Show"

[node name="RewardedVideoSHow" type="Button" parent="UIman/Control/PreControl/PastaGigi/RemotIklan/Shower/ButtonActionsLoad"]
margin_left = 736.0
margin_right = 1216.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 3 )
text = "Video Rewarded Show"

[node name="Hider" type="VBoxContainer" parent="UIman/Control/PreControl/PastaGigi/RemotIklan"]
margin_top = 387.0
margin_right = 1216.0
margin_bottom = 510.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="UIman/Control/PreControl/PastaGigi/RemotIklan/Hider"]
margin_right = 1216.0
margin_bottom = 49.0
size_flags_vertical = 5
custom_fonts/font = ExtResource( 3 )
text = "Hide Iklan Now!"
align = 1
valign = 1

[node name="ButtonActionsLoad" type="HBoxContainer" parent="UIman/Control/PreControl/PastaGigi/RemotIklan/Hider"]
margin_top = 57.0
margin_right = 1216.0
margin_bottom = 123.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="BannerHide" type="Button" parent="UIman/Control/PreControl/PastaGigi/RemotIklan/Hider/ButtonActionsLoad"]
margin_left = 476.0
margin_right = 740.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 3 )
text = "BannerHide"

[node name="RemotQUit" type="VBoxContainer" parent="UIman/Control/PreControl/PastaGigi"]
margin_left = 1224.0
margin_right = 1920.0
margin_bottom = 510.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="CoinRewardShow" type="Label" parent="UIman/Control/PreControl/PastaGigi/RemotQUit"]
margin_right = 696.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 3 )
text = "Ad Reward = 12345 Kvz"
align = 1
valign = 1
autowrap = true

[node name="QuitDialoguer" parent="UIman/Control/PreControl/PastaGigi/RemotQUit" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 57.0
margin_right = 696.0
margin_bottom = 510.0

[node name="Admob" type="Node" parent="."]
script = ExtResource( 1 )
banner_id = "ca-app-pub-3940256099942544/6300978111"
interstitial_id = "ca-app-pub-3940256099942544/1033173712"
rewarded_id = "ca-app-pub-3940256099942544/5224354917"
max_ad_content_rate = "T"
[connection signal="pressed" from="UIman/Control/PreControl/PastaGigi/RemotIklan/Loader/ButtonActionsLoad/Banner" to="." method="_on_Banner_pressed"]
[connection signal="pressed" from="UIman/Control/PreControl/PastaGigi/RemotIklan/Loader/ButtonActionsLoad/Interstitial" to="." method="_on_Interstitial_pressed"]
[connection signal="pressed" from="UIman/Control/PreControl/PastaGigi/RemotIklan/Loader/ButtonActionsLoad/RewardedVideo" to="." method="_on_RewardedVideo_pressed"]
[connection signal="pressed" from="UIman/Control/PreControl/PastaGigi/RemotIklan/Shower/ButtonActionsLoad/BannerSHow" to="." method="_on_BannerSHow_pressed"]
[connection signal="pressed" from="UIman/Control/PreControl/PastaGigi/RemotIklan/Shower/ButtonActionsLoad/InterstitialSHow" to="." method="_on_InterstitialSHow_pressed"]
[connection signal="pressed" from="UIman/Control/PreControl/PastaGigi/RemotIklan/Shower/ButtonActionsLoad/RewardedVideoSHow" to="." method="_on_RewardedVideoSHow_pressed"]
[connection signal="pressed" from="UIman/Control/PreControl/PastaGigi/RemotIklan/Hider/ButtonActionsLoad/BannerHide" to="." method="_on_BannerHide_pressed"]
[connection signal="ChangeDVDPls" from="UIman/Control/PreControl/PastaGigi/RemotQUit/QuitDialoguer" to="." method="_on_QuitDialoguer_ChangeDVDPls"]
[connection signal="ShutdownSixLittleNightmarePls" from="UIman/Control/PreControl/PastaGigi/RemotQUit/QuitDialoguer" to="." method="_on_QuitDialoguer_ShutdownSixLittleNightmarePls"]
[connection signal="banner_failed_to_load" from="Admob" to="." method="_on_Admob_banner_failed_to_load"]
[connection signal="banner_loaded" from="Admob" to="." method="_on_Admob_banner_loaded"]
[connection signal="insterstitial_failed_to_load" from="Admob" to="." method="_on_Admob_insterstitial_failed_to_load"]
[connection signal="interstitial_closed" from="Admob" to="." method="_on_Admob_interstitial_closed"]
[connection signal="interstitial_loaded" from="Admob" to="." method="_on_Admob_interstitial_loaded"]
[connection signal="rewarded" from="Admob" to="." method="_on_Admob_rewarded"]
[connection signal="rewarded_video_closed" from="Admob" to="." method="_on_Admob_rewarded_video_closed"]
[connection signal="rewarded_video_failed_to_load" from="Admob" to="." method="_on_Admob_rewarded_video_failed_to_load"]
[connection signal="rewarded_video_left_application" from="Admob" to="." method="_on_Admob_rewarded_video_left_application"]
[connection signal="rewarded_video_loaded" from="Admob" to="." method="_on_Admob_rewarded_video_loaded"]
[connection signal="rewarded_video_opened" from="Admob" to="." method="_on_Admob_rewarded_video_opened"]
[connection signal="rewarded_video_started" from="Admob" to="." method="_on_Admob_rewarded_video_started"]
